--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "axios-retry",
   "version": "1.0.0",
+  "type": "module",
   "description": "A demo repo for Axios retry blog post",
   "main": "index.js",
   "scripts": {
@@ -18,6 +19,7 @@
   },
   "homepage": "https://github.com/geshan/axios-retry#readme",
   "dependencies": {
-    "axios": "^1.2.0"
+    "axios": "^1.5.0",
+    "axios-retry": "^3.8.0"
   }
 }
